<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/canvasButtonHolder"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload" />

        <Button
            android:id="@+id/mirrorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mirror" />

        <Button
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <ImageView
            android:id="@+id/shadowButton"
            android:layout_width="90dp"
            android:layout_height="37dp"
            android:src="@mipmap/light_100"
            android:padding="4dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/completeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sessionButtonHolder"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backToDesignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>

        <Button
            android:id="@+id/invoiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice"/>

        <Button
            android:id="@+id/designButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <Button
            android:id="@+id/printButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/print" />

        <Button
            android:id="@+id/newSessionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"/>

    </LinearLayout>

</LinearLayout>