<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/sku"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="12dp"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lampRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="total"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tax"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tax"
                android:textSize="12dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/order_total"
                android:textSize="12dp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderTotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="order total"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>